# AI_Resume-Job_Matcher

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: mock_job_description.docx
notebooks/: Project_Execution.ipynb
src/skills/: skills.py
src/utils/: extract_skills.py  extract_text.py  preprocess.py  skill_matcher.py
